crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_chain_stats_raw_data_with_indexer@mainnet_0.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "010000000000000001000000000000009c060000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000000",
  ),
]
