crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_chain_stats_raw_data_with_indexer@mainnet_1.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "02000000000000000200000000000000ed0c0000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000100000000000000",
  ),
]
