crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_chain_stats_raw_data_with_indexer@mainnet_2.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "030000000000000003000000000000003e130000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000100000000000000",
  ),
]
