crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_chain_stats_raw_data_with_indexer@testnet_2.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "0300000000000000030000000000000040130000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000100000000000000",
  ),
]
