crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/explorer_daily_stats_raw_data_with_indexer@mainnet_2.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000042ce",
    v: "ce4200000000000002000000ed73e297d7c51cb8dc53fc2213d7e2e3f116eb4f26434496fc1926906ca2020090041358000000000200000000000000ca7a1358000000009004135800000000ca7a1358000000000800000000000000312e30303030303001000000000000006cdc020000000000000000000000000000000000000000000000000000000000000000000000000000000000000000006cdc02000000000048e801000000000003000000000000000300000000000000030000000000000000600000000000000000000000000000000000000000000000000000000000003e130000000000006cdc0200000000000000000000000000f04902000000000000000000000000007c9200000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000006cdc020000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000030000000000000000000000000000000000000000000000000000000000000000000000000000006cdc020000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
]
